replaced css 'center'-class by usage of bootstraps 'text-center'; removed hardcoded width to avoid layout problems

--- a/app/sass/inc/_home.scss
+++ b/app/sass/inc/_home.scss
@@ -1,16 +1,10 @@
-
-
-
-.center  { text-align: center; }
-
-#headline{
+#headline {
   font-size: 80px;
 }
 
-
 #site {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  //width: 1200px;
+  //margin-left: auto;
+  //margin-right: auto;
 }
 
